User login api with documents
