# app/Http/Requests/Auth/UserLoginRequest.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Requests\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UserLoginRequest extends FormRequest {
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize() {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules() {
+        return [
+            'email'    => ['required', 'string', 'email', 'max:255', 'exists:users'],
+            'password' => ['required', 'string', 'min:6'],
+        ];
+    }
+}
